--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
           <button class="btn btn-outline-light btn-lg download-button" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
-        <div class="col-lg-6">
-          <img class="phonePic img-fluid" src="images/iphone6v2.png" alt="iphone-mockup">
+        <div class="col-lg-6 ">
+          <img class="phonePic" src="images/iphone6v2.png" alt="iphone-mockup">
         </div>
       </div>
 
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
-         <i class="fa-solid fa-circle-check icon-list fa-3x"> </i>
+          <i class="fa-solid fa-circle-check icon-list fa-3x"> </i>
           <h3>Easy to use.</h3>
           <p>So easy to use, even a toddler could do it.</p>
         </div>
@@ -138,35 +138,46 @@
   <!-- Pricing -->
 
   <section id="pricing">
+    <h2>A Plan for Every Sniffer's Needs</h2>
+    <p>Simple and affordable price plans for you to find your next aroma.</p>
+    <div class="row">
+      <div class="col-lg-4 col-md-6">
+        <div class="card  mb-4 rounded-3 shadow-sm">
+          <div class="card-body">
+            <h3 class="card-header">The Recruit</h3>
+            <h2 class="card-title pricing-card-title">Free</h2>
+            <p>5 Scents</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-header">The Connoisseur</h3>
+            <h2 class="card-title pricing-card-title"> $49 / mo</h2>
+            <p>10 Scents</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="w-100 btn btn-lg btn-primary">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-header">Enterprise</h3>
+            <h2 class="card-title pricing-card-title">$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Scents</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="w-100 btn btn-lg btn-primary">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
 
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+  </div>
   </section>
 
 
